# tasque

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
coach_prompts/: career.md  creative.md  education.md  finance.md  health.md  home.md  personal.md  recreation.md  relationships.md
prompts/: coach_reply_scaffold.md  coach_scaffold.md  strategist.md
src/tasque/: buckets.py  config.py  logging_setup.py
src/tasque/agents/: __init__.py  result_inbox.py
src/tasque/chains/: __init__.py  checkpointer.py  crud.py  dlq.py  manager.py  registry.py  scheduler.py  spec.py
src/tasque/cli/: __init__.py  __main__.py  chain.py  coach.py  dlq.py  jobs.py  mcp.py  memory.py  proxy.py  serve.py  status.py
src/tasque/coach/: __init__.py  (+5 more)
tests/: conftest.py  test_agents_result_inbox.py  test_chain_status_panel.py  test_chain_ui_watcher.py  test_chains_crud.py  test_chains_dlq.py  test_chains_e2e.py  test_chains_scheduler.py  test_chains_spec.py  test_chains_supervisor.py  test_coach_graph.py  test_coach_trigger.py  test_cron.py  test_discord_channel_config.py  test_discord_threads.py  test_dlq.py  test_dlq_watcher.py  test_importers.py  test_jobs_runner.py  test_jobs_scheduler.py  test_mcp_aim_plan_chain.py  test_mcp_condense.py  test_mcp_notes.py  test_mcp_tool_triggers.py  test_mcp_worker_patterns.py  test_memory_decay.py  test_memory_repo.py  test_notify.py  test_ops_panel.py  test_ops_watcher.py  test_proxy.py  test_reply_runtime.py  test_router.py  test_strategist_monitoring.py  test_worker_run_watcher.py
tests/fixtures/: demo.jsonl  sample_stream.jsonl
(+48 files in other folders)
